@@ -4,6 +4,9 @@ Changes in @NEW@:
       RPM, including diff/patch merging.
     * Emulate RPM file coloring behavior to allow a package to take ownership
       of files from another package based on the ABI used by those binaries.
+    * The caching layer in the Conary proxy will now use locking
+      to prevent other processes from trying to do the same work.
+      (CNY-3374)
 
   o Bug Fixes:
     * gzip files that are corrupt in the first 4KB of compressed data
